# ELaSTIC

./: .release.sh  .test.sh  .testmpe.sh  CMakeLists.txt  INSTALL  LICENSE  LICENSE_MIT.txt  Makefile  README  config.mk
doc/: CMakeLists.txt  INSTALL  SKETCHING  config.example  elastic-sketch-mpi.txt  elastic-sketch.txt  userguide.html
include/bio/: fastx_iterator.hpp  sequence_compare.hpp
include/jaz/: algorithm.hpp  hash.hpp  iterator.hpp  parameters.hpp  string.hpp
include/jaz/boost/: files.hpp
include/jaz/science/: disjoint_set.hpp  sffun.h
include/mpix/: data_bucketing.hpp  partition_balance.hpp  simple_partition.hpp  write_cbuffer.hpp
include/mpix2/: MPE_Log.hpp  partition_balance.hpp  sample_sort.hpp  simple_partition.hpp  write_cbuffer.hpp
src/: CMakeLists.txt  CompressedAlphabet.hpp  Makefile  SequenceCodec.hpp  SequenceMap.hpp  config.hpp  fast_vector.hpp  iomanip.cpp  iomanip.hpp  tools.hpp
src/mpi/: CMakeLists.txt  Makefile  StaticWSQueue.hpp  elastic-sketch-mpi.cpp  elastic-sketch.cpp  sequence_compact.hpp
src/mpi/sketch/: Sequence.hpp  SequenceDB.hpp  StaticWSQueue.hpp  config_log.hpp  create_smatrix.hpp  generate_edges.hpp  make_shingles.hpp  read_input.hpp  sketch_id.hpp  validate_edges.hpp  write_output.hpp
src/omp/: CMakeLists.txt  Makefile  elastic-optimize.cpp  elastic-prepare-omp.cpp  elastic-prepare.cpp  elastic-sketch-omp.cpp
src/omp/sketch-omp/: read_input.hpp
src/seq/: CMakeLists.txt  Makefile  elastic-cluster-seq.cpp  elastic-cluster.cpp  elastic-convert.cpp  elastic-finalize-seq.cpp  elastic-finalize.cpp
tests/: make_shingles.cpp  sketch_compare.cpp
