SET(SKETCH_PROG elastic-sketch)
SET(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})

FIND_LIBRARY(PMI_LIB NAMES pmi2 pmi)

IF (PMI_LIB)
  MESSAGE(STATUS "PMI support available: ${PMI_LIB}")
ELSE()
  MESSAGE(STATUS "No PMI support available")
  SET(PMI_LIB "")
ENDIF()

IF (WITH_MPE)
  INCLUDE_DIRECTORIES(${MPE_INCLUDE_DIR})
  LINK_DIRECTORIES(${MPE_LIB_DIR})
ENDIF()

ADD_EXECUTABLE(${SKETCH_PROG} elastic-sketch.cpp)
TARGET_LINK_LIBRARIES(${SKETCH_PROG} ${IOMANIP_LIB} ${PMI_LIB})

IF (WITH_MPE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWITH_MPE")
  TARGET_LINK_LIBRARIES(${SKETCH_PROG} lmpe mpe)
ENDIF()

INSTALL(TARGETS ${SKETCH_PROG} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
