SET(PREPARE_PROG elastic-prepare)

FIND_PACKAGE(OpenMP)

IF (OPENMP_FOUND)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF()

ADD_EXECUTABLE(${PREPARE_PROG} elastic-prepare.cpp)
TARGET_LINK_LIBRARIES(${PREPARE_PROG} ${IOMANIP_LIB} ${Boost_LIBRARIES})

INSTALL(TARGETS ${PREPARE_PROG} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
