SET(CLUSTER_PROG elastic-cluster)
SET(CONVERT_PROG elastic-convert)
SET(FINALIZE_PROG elastic-finalize)

ADD_EXECUTABLE(${CLUSTER_PROG} elastic-cluster.cpp)
TARGET_LINK_LIBRARIES(${CLUSTER_PROG} ${IOMANIP_LIB} ${Boost_LIBRARIES})

ADD_EXECUTABLE(${CONVERT_PROG} elastic-convert.cpp)
TARGET_LINK_LIBRARIES(${CONVERT_PROG} ${IOMANIP_LIB} ${Boost_LIBRARIES})

ADD_EXECUTABLE(${FINALIZE_PROG} elastic-finalize.cpp)
TARGET_LINK_LIBRARIES(${FINALIZE_PROG} ${IOMANIP_LIB} ${Boost_LIBRARIES})

INSTALL(TARGETS ${CLUSTER_PROG} ${CONVERT_PROG} ${FINALIZE_PROG} RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
